--- a/app/views/tasks/_show_status.html.erb
+++ b/app/views/tasks/_show_status.html.erb
@@ -18,30 +18,32 @@
         <em>next occurence: <%= l next_date, format: :date_only%></em><br/>
       <% end %>
       <br/><br/>
-      <%= form_tag task_complete_current_url(status.task.id, status.schedule.id), remote:true, id: "complete_form_#{status.id}" do %>
-        <div class="large-3">
-          <div class="large-6 switch round">
-            <%= radio_button_tag "complete", 
-                  "false", 
-                  !complete, 
-                  {
-                    onchange: "$('#complete_form_#{status.id}').submit();"
-                  }
-            %>
-            <%= label_tag 'Off', 'No', class: 'light-text' %>
+      <% if !status.schedule.next_occurrence.nil? %>
+        <%= form_tag task_complete_current_url(status.task.id, status.schedule.id), remote:true, id: "complete_form_#{status.id}" do %>
+          <div class="large-3">
+            <div class="large-6 switch round">
+              <%= radio_button_tag "complete", 
+                    "false", 
+                    !complete, 
+                    {
+                      onchange: "$('#complete_form_#{status.id}').submit();"
+                    }
+              %>
+              <%= label_tag 'Off', 'No', class: 'light-text' %>
 
-            <%= radio_button_tag "complete", 
-                  "true", 
-                  complete,
-                  {
-                    onchange: "$('#complete_form_#{status.id}').submit();"
-                  }
-            %>
-            <%= label_tag 'On', 'Yes', class:'light-text' %>
-            <span></span>
+              <%= radio_button_tag "complete", 
+                    "true", 
+                    complete,
+                    {
+                      onchange: "$('#complete_form_#{status.id}').submit();"
+                    }
+              %>
+              <%= label_tag 'On', 'Yes', class:'light-text' %>
+              <span></span>
+            </div>
           </div>
-        </div>
-      <% end %> 
+        <% end %> 
+      <% end %>
     <% end %>
   </div>
   <%= link_to 'Edit', edit_task_status_path(task.id, status.id), class: 'button small round', remote: true %> 
