--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
       </nav>
       <% if content_for? :crumbs %>
         <nav class="breadcrumbs">
-          <li><%= content_for :crumbs %></li>
+          <%= content_for :crumbs %>
         </nav>
       <% end %>
     </div> 
