--- a/app/views/agenda/_user_select_form.html.erb
+++ b/app/views/agenda/_user_select_form.html.erb
@@ -1,12 +1,15 @@
-<div class="rows" style="width: 400px">
+<div class="rows" style="width: 600px">
 <%= form_for('agenda', html: {id: 'view_form'}) do |f| %>
-  <div class="columns large-7">
+  <div class="columns large-6">
     From <span id='start_date'><%= @start_date.to_s %></span> to <span id='end_date'><%= @end_date.to_s %></span>
   </div>
   <% if current_user.admin? %>
-  <div class="columns large-5">
-    <%= f.collection_select :view, User.order(:last_name, :first_name), :id, :full_name, {selected: @show_user, include_blank:'All'}, {onchange: "$('#view_form').submit()"} %>
+  <div class="columns large-3">
+    <%= f.collection_select :view_user, User.order(:last_name, :first_name), :id, :full_name, {selected: @show_user, include_blank:'All'}, {onchange: "$('#view_form').submit()"} %>
   </div>
   <% end %>
+  <div class="columns large-3">
+    <%= f.collection_select :view_company, Company.order(:name), :id, :name, {selected: @show_company, include_blank:'All'}, {onchange: "$('#view_form').submit()"} %>
+  </div>
 <% end %>
 </div>
