--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,7 +6,8 @@
 
 <div class="large-6">
   <div class="row headerrow">
-    <div class="large-10 columns">Name</div>
+    <div class="large-5 columns">Name</div>
+    <div class="large-5 columns">Team</div>
     <div class="large-1 columns">&nbsp;</div>
     <div class="large-1 columns">&nbsp;</div>
   </div>
@@ -15,7 +16,8 @@
 <div class="large-6">
   <% @companies.each do |company| %>
     <div class="row <%= cycle('oddrow', 'evenrow') %>">
-      <div class="large-10 columns"><%= link_to company.name, company %></div>
+      <div class="large-5 columns"><%= link_to company.name, company %></div>
+      <div class="large-5 columns"><%= company.team ? company.team.name : 'None' %></div>
       <div class="large-1 columns"><%= link_to 'Edit', edit_company_path(company) %></div>
       <div class="large-1 columns"><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></div>
     </div>
