--- a/app/views/agenda/_user_select_form.html.erb
+++ b/app/views/agenda/_user_select_form.html.erb
@@ -1,15 +1,18 @@
-<div class="rows" style="width: 600px">
+<div class="rows" style="width: 800px">
 <%= form_for('agenda', html: {id: 'view_form'}) do |f| %>
-  <div class="columns large-6">
+  <div class="columns large-5">
     From <span id='start_date'><%= @start_date.to_s %></span> to <span id='end_date'><%= @end_date.to_s %></span>
   </div>
   <% if current_user.admin? %>
-  <div class="columns large-3">
-    <%= f.collection_select :view_user, User.order(:last_name, :first_name), :id, :full_name, {selected: @show_user, include_blank:'All'}, {onchange: "$('#view_form').submit()"} %>
+  <div class="columns large-2">
+    <%= f.collection_select :view_user, User.order(:last_name, :first_name), :id, :full_name, {selected: @show_user, include_blank:'All Users'}, {onchange: "$('#view_form').submit()"} %>
   </div>
   <% end %>
   <div class="columns large-3">
-    <%= f.collection_select :view_company, Company.order(:name), :id, :name, {selected: @show_company, include_blank:'All'}, {onchange: "$('#view_form').submit()"} %>
+    <%= f.collection_select :view_company, Company.order(:name), :id, :name, {selected: @show_company, include_blank:'All Companies'}, {onchange: "$('#view_form').submit()"} %>
+  </div>
+  <div class="columns large-2">
+    <%= f.collection_select :view_team, Team.order(:name), :id, :name, {selected: @show_team, include_blank:'All Teams'}, {onchange: "$('#view_form').submit()"} %>
   </div>
 <% end %>
 </div>
