--- a/app/views/agenda/index.html.erb
+++ b/app/views/agenda/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, 'Agenda' %>
 <% 
   c render('user_select_form')
- %>
+%>
 <% if current_user.admin? && @show_all %>
   <% User.find(:all, order: 'last_name, first_name').each do |u|  %>
     <% if u.has_overdue? %>  
@@ -20,7 +20,7 @@
 <% if !@happenings.empty? %>
   <div id="load_more" class="panel">
     <p class="text-center"><strong>
-      <%= link_to "load more", agenda_path(@end_date, agenda: { view_user: @show_user, view_company: @show_company }), remote: true, id: 'load_more_link' %>
+      <%= link_to "load more", agenda_path(@end_date, agenda: { view_user: @show_user, view_company: @show_company, view_team: @show_team }), remote: true, id: 'load_more_link' %>
     </strong></p>
   </div>
 <% end %>
