added daily scheduler

--- a/app/views/tasks/_scheduler.html.erb
+++ b/app/views/tasks/_scheduler.html.erb
@@ -4,6 +4,7 @@
     <%= f.select(:kind, 
           [
             ['None', :none], 
+            ['Daily', :daily], 
             ['Once', :once],
             ['Yearly', :yearly],
             ['Monthly', :monthly],
