--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,8 @@
                   <li class="divider"></li>
                   <li><%= link_to "Categories", categories_path %></li>
                   <li class="divider"></li>
+                  <li><%= link_to 'Groups', groups_path %></li>
+                  <li class="divider"></li>
                   <li><%= link_to 'Users', admin_show_users_path %></li>
                 </ul>
               </li>
