added daily work week to schedule

--- a/app/views/tasks/_scheduler.html.erb
+++ b/app/views/tasks/_scheduler.html.erb
@@ -5,6 +5,7 @@
           [
             ['None', :none], 
             ['Daily', :daily], 
+            ['Every Weekday', :daily_work], 
             ['Once', :once],
             ['Yearly', :yearly],
             ['Monthly', :monthly],
