--- a/app/views/agenda/_agenda_list.html.erb
+++ b/app/views/agenda/_agenda_list.html.erb
@@ -28,6 +28,7 @@
                   <% else %>
                     <div class='columns small-1'><%= link_to :view, task_path(remind.id) %></div>
                   <% end %>
+                <% if current_user.id == remind.user_id %>
                 <div class="columns small-2">
                   <% 
                     complete = !remind.schedule.history_on(date).nil? 
@@ -55,6 +56,7 @@
                     </div>
                   <% end %>
                 </div>
+                <% end %>
               </div>
             </div>
         <% end %>
