--- a/app/views/overdue/index.html.erb
+++ b/app/views/overdue/index.html.erb
@@ -31,9 +31,11 @@
         <div class="large-1 columns">
           <%= link_to :view, task_path(tors(odt).id) %>
         </div>
+        <% if current_user.id == odt.user_id %>
         <div class="large-1 columns">
           <%= link_to :clear, task_complete_path(tors(odt).id, odt.schedule.id,  l(od_date, format: :short_date_only)), remote: true %>
         </div>
+        <% end %>
         <div class="large-4 columns">
           <span style='color: red'><%= l od_date, format: :date_only %></span>
         </div>
