--- a/app/views/tasks/_show_task.html.erb
+++ b/app/views/tasks/_show_task.html.erb
@@ -18,7 +18,7 @@
         <em>next occurence:</em><%= l next_date, format: :date_only%>
       <% end %>
       <br/><br/>
-      <% if !task.schedule.next_occurrence.nil?  %>
+      <% if !task.schedule.next_occurrence.nil? && current_user.id == task.user_id  %>
         <%= form_tag task_complete_current_url(task.id, task.schedule.id), remote:true, id: 'complete_form' do %>
           <div class="large-3">
             <div class="large-6 switch round">
