--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -40,7 +40,8 @@
 
 <div class="row headerrow">
   <div class="small-4 columns">Title</div>
-  <div class="small-4 columns">Company</div>
+  <div class="small-1 columns">Company</div>
+  <div class="small-3 columns">Schedule</div>
   <div class="small-3 columns">Owner</div>
   <div class="small-1 columns">&nbsp;</div>
 </div>
@@ -63,7 +64,8 @@
       </div>
     </div>
   </div>
-  <div class="small-4 columns"><%= task.company.name %></div>
+  <div class="small-1 columns"><%= task.company.name %></div>
+  <div class="small-3 columns"><%= task.schedule.to_s %></div>
   <div class="small-3 columns"><%= task.user.full_name %></div>
   <div class="small-1 columns"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
 </div>
