--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,12 @@
             <% end %>
             <% if user_signed_in? %>
               <li class="divider"></li>
+              <li><%= link_to "Glance", glance_path %></li>
+            <% end %>
+            <% if user_signed_in? %>
+              <li class="divider"></li>
               <li><%= link_to "Tasks", tasks_path %></li>
-            <% end %>  
+            <% end %>
             <% if user_signed_in? && current_user.admin? %>
               <li class="divider"></li>
               <li class="has-dropdown">
@@ -56,7 +60,7 @@
                   <li><%= link_to 'Users', admin_show_users_path %></li>
                 </ul>
               </li>
-            <% end %>  
+            <% end %>
             <% if user_signed_in? %>
               <li class="divider"></li>
               <li><%= link_to 'Change password', change_password_path %></li>
@@ -72,7 +76,7 @@
           <%= content_for :crumbs %>
         </nav>
       <% end %>
-    </div> 
+    </div>
     <div class="panel" style="background: white">
       <% if notice %>
         <p class="notice"><div class="alert-box success"><%= notice %></div></p>
