fixed header being flaky. need to port this to use bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div class="fixed">
+    <div>
       <nav class="top-bar">
         <ul class="title-area">
           <li class="name">
