--- a/app/views/glance/_company_list.html.erb
+++ b/app/views/glance/_company_list.html.erb
@@ -1,15 +1,17 @@
-<div class='row'>
-  <div class='myheader columns'>
-    <center><h3>Companies</h3></center>
-  </div>
-</div>
-<% @companies.each do |c| %>
-  <div id='company_<%= c.id %>' class="row <%= cycle('oddrow', 'evenrow')%> <%= same(c.id, @current_company.id, 'selected' ) %> " style="padding:15px">
-    <div class='columns'>
-      <%= link_to c.name, glance_task_list_path(company_id: c.id), remote: true %>
-      <div id="<%= c.id %>" class="<%= not_same(@current_company.name, c.name, 'myhidden') %>">
-        <%= c.info.html_safe %>
-      </div>
+<fieldset>
+  <div class='row'>
+    <div class='myheader columns'>
+      <center><h3>Companies</h3></center>
     </div>
   </div>
-<% end %>
+  <% @companies.each do |c| %>
+    <div id='company_<%= c.id %>' class="row <%= cycle('oddrow', 'evenrow')%> <%= same(c.id, @current_company.id, 'selected' ) %> " style="padding:15px">
+      <div class='columns'>
+        <%= link_to c.name, glance_task_list_path(company_id: c.id), remote: true %>
+        <div id="<%= c.id %>" class="<%= not_same(@current_company.name, c.name, 'myhidden') %>">
+          <%= c.info.html_safe %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</fieldset>
