--- a/app/views/glance/_task_list.html.erb
+++ b/app/views/glance/_task_list.html.erb
@@ -7,7 +7,7 @@
   <% @tasks.each do |t| %>
     <div id='task_<%= t.id %>' class="data row <%= cycle('oddrow', 'evenrow')%> <%= same(t.id, @task.id, 'selected') %>">
       <div class='columns' style='padding:5px'>
-        <%= check_box_tag 'completed', t.id , t.checked, :class => "task-check" %>
+        <%= check_box_tag 'completed', t.id , t.checked, :class => "task-check", onclick:"javascript:checkeded(#{t.id})" %>
         <%= link_to t.title, glance_task_info_path(task_id: t.id), remote: true %>
         <% if !t.schedule.next_occurrence.nil? %>
           <br/>
@@ -19,15 +19,10 @@
 </fieldset>
 
 <script language='javascript'>
-  document.addEventListener("DOMContentLoaded", function(event) { 
-  $(document).ready(function() {
-    $(".task-check").bind('change', function(){
-      $.ajax({
-        url: '/tasks/'+this.value+'/check_it',
-        type: 'POST',
-        data: {"completed": this.checked}
-      });
+  function checkeded(id) { 
+    $.ajax({
+      url: '/tasks/'+id+'/check_it',
+      type: 'POST',
     });
-  });
-});
+  }
 </script>
